--- a/Monica.html
+++ b/Monica.html
@@ -4,14 +4,21 @@
         <title>Monica sweet frenchie</title>
         <link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/512/8061/8061054.png"/>
     </head>
-    <body>
-        <h1 align="center" style="color:rgb(179, 176, 9)">Welcome to Monica's world</h1>
-        <h2 align="center" style="color:rgb(194, 197, 4)">it's very nice here</h2>
-        <p align="center"><a style="color:rgb(224, 15, 162)" href="https://instagram.com/monica_sweet_frenchie?igshid=YmMyMTA2M2Y=" target="_blank">
+    <body style="background-image:url(https://images.wallpaperscraft.ru/image/single/frantsuzskij_buldog_sobaka_morda_vzglyad_grust_108476_1920x1080.jpg)">
+        <h1 style="font-size:78px" id="monicastart" align="center" style="color:rgb(7, 7, 0)">Welcome to Monica's world</h1>
+        <h2 style="font-size:48px" align="center" style="color:rgb(13, 14, 1)">it's very nice here</h2>
+        <hr>
+        </a></p>
+        <p style="font-size:48px" align="center"><a style="color:rgb(224, 15, 162)" href="https://instagram.com/monica_sweet_frenchie?igshid=YmMyMTA2M2Y=" target="_blank">
             Instagram link
         </a></p>
-        <p align="center"><a style="color:rgb(248, 3, 3)" href="https://youtube.com/watch?v=Uan4Z_yO_uE&t=37s" target="_blank">
+        <p style="font-size:48px" align="center"><a style="color:rgb(248, 3, 3)" href="https://youtube.com/watch?v=Uan4Z_yO_uE&t=37s" target="_blank">
             Youtube link
-        </a></p>
+        <!-- <ul>
+            <li> <a href="https://instagram.com/monica_sweet_frenchie?igshid=YmMyMTA2M2Y=" target="_blank">Instagram</a> link to the page </li>
+            <li> <a href="https://youtube.com/watch?v=Uan4Z_yO_uE&t=37s" target="_blank">Youtube</a> link to the channel </li>
+        </ul> -->
+        <hr>
+        <p style="font-size:18px" align="center"><a href="#monicastart"><big>go back to the beginning</big></a></p>
     </body>
 </html>
