--- a/Monica.html
+++ b/Monica.html
@@ -9,10 +9,10 @@
         <h2 style="font-size:48px" align="center" style="color:rgb(13, 14, 1)">it's very nice here</h2>
         <hr>
         </a></p>
-        <p style="font-size:48px" align="center"><a style="color:rgb(224, 15, 162)" href="https://instagram.com/monica_sweet_frenchie?igshid=YmMyMTA2M2Y=" target="_blank">
+        <p style="font-size:48px" align="center"><a style="background-color:#f5338e; color:#ffffff"" href="https://instagram.com/monica_sweet_frenchie?igshid=YmMyMTA2M2Y=" target="_blank">
             Instagram link
         </a></p>
-        <p style="font-size:48px" align="center"><a style="color:rgb(248, 3, 3)" href="https://youtube.com/watch?v=Uan4Z_yO_uE&t=37s" target="_blank">
+        <p style="font-size:48px" align="center"><a style="background-color:#ff0000; color:#ffffff"" href="https://youtube.com/watch?v=Uan4Z_yO_uE&t=37s" target="_blank">
             Youtube link
         <!-- <ul>
             <li> <a href="https://instagram.com/monica_sweet_frenchie?igshid=YmMyMTA2M2Y=" target="_blank">Instagram</a> link to the page </li>
