lola 	modified:   Monica.html 	modified:   index.html

--- a/Monica.html
+++ b/Monica.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <style>
+            body {
+    background: url(https://images.wallpaperscraft.ru/image/single/frantsuzskij_buldog_sobaka_morda_vzglyad_grust_108476_1920x1080.jpg) no-repeat center top fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+     background-size: cover;
+}
+        </style>
         <title>Monica sweet frenchie</title>
         <link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/512/8061/8061054.png"/>
     </head>
-    <body style="background-image:url(https://images.wallpaperscraft.ru/image/single/frantsuzskij_buldog_sobaka_morda_vzglyad_grust_108476_1920x1080.jpg)">
+    <body>
         <h1 style="font-size:78px" id="monicastart" align="center" style="color:rgb(7, 7, 0)">Welcome to Monica's world</h1>
         <h2 style="font-size:48px" align="center" style="color:rgb(13, 14, 1)">it's very nice here</h2>
         <hr>
